--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "dotenv": "^5.0.1"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "jest": "^22.4.3",
     "nodemon": "^1.17.3"
   }
 }
